8.terraform-provisioners/3.terraform-provisoner_remote/main.tf
#Task31 : Using remote-exec provisioners - executes on remote machine
#Steps: this code didnt work properly -- so edit and fix it.
#Task: ec2-creation-with-sg-keypair-provisioner-remote-exec
#1. create an ec2 instance
#2. user userdata to install nginx
#3. create keypair
#4. link this keypair to ec2 instance, so you have to go back to block1
#5. create security group with ssh access
#6. add securitygroup ids to ec2 instance
#7.add output variable to get public ip, you can do so in same file else in seperate file also
#******************************************************#

#start writing the script from herecheck 

provider "aws" {
  region = var.region
}
#1. create a ec2 instance
resource "aws_instance" "myec2-instance" {
  ami           = "ami-053b0d53c279acc90"
  instance_type = "t2.micro"
  tags = {
    Name = "my-ec2-with-terraform"
  }
  #4. link this keypair to ec2 instance, so you have to go back to block1 
  key_name = aws_key_pair.myec2-keypair.id

  #6. add securitygroup ids to ec2 instance
  vpc_security_group_ids = [aws_security_group.ssh-acccess.id]

  #2. user provisioner remote-exec to install nginx
  provisioner "remote-exec" {
    inline = [
      "sudo apt update -y",
      "sudo apt install -y nginx",
      "sudo echo 'Hello World' > /var/www/html/index.html",
      "sudo systemctl enable nginx",
      "sudo systemctl start nginx"
    ]

    connection {
      type        = "ssh"
      user        = "ubuntu"
      host        = self.public_ip
      private_key = file("/Users/sainath/.ssh/id_rsa_ec2_with_terraform")
    }
  }
}
#3. create keypair
#on your mac system -- type command ssh-keygen -b 4096 -t rsa
# give any location to save the file -->/Users/sainath/.ssh/id_rsa_ec2_with_terraform.pub and private is id_rsa_ec2_with_terraform
resource "aws_key_pair" "myec2-keypair" {
  key_name = "myec2-key"
  #public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQD3F6tyPEFEzV0LX3X8BsXdMsQz1x2cEikKDEY0aIj41qgxMCP/iteneqXSIFZBp5vizPvaoIR3Um9xK7PGoW8giupGn+EPuxIA4cDM4vzOqOkiMPhz5XK0whEjkVzTo4+S0puvDZuwIsdiW9mxhJc7tgBNL0cYlWSYVkz4G/fslNfRPW5mYAM49f4fhtxPb5ok4Q2Lg9dPKVHO/Bgeu5woMc7RY0p1ej6D4CKFE6lymSDJpW0YHX/wqE9+cfEauh7xZcG0q9t2ta6F6fmX0agvpFyZo8aFbXeUBr7osSCJNgvavWbM/06niWrOvYX2xwWdhXmXSrbX8ZbabVohBK41 email@example.com"
  public_key = file("/Users/sainath/.ssh/id_rsa_ec2_with_terraform.pub")
}

#5. create security group with ssh access
resource "aws_security_group" "ssh-acccess" {
  name        = "allow_ssh inbound"
  description = "Allow ssh inbound traffic"

  ingress {
    description = "allow inbound ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }
}

#7.add output variable to get public ip, you can do so in same file else in seperate file also
output "ec2-public-ip" {
  value = aws_instance.myec2-instance.public_ip
}
